--- a/k8s/kind-config.yaml
+++ b/k8s/kind-config.yaml
@@ -10,7 +10,7 @@ nodes:
             node-labels: "ingress-ready=true"
     extraPortMappings:
       - containerPort: 80
-        hostPort: 8888
+        hostPort: 8888  # порт к которому идет обращение из вне
         protocol: TCP
   - role: worker
   - role: worker
